- replaced method SCIPsepaWasDelayed() by SCIPsepaWasLPDelayed() and SCIPsepaWasSolDelayed()
- additional parameter "sol" for methods SCIPaddCut(), SCIPgetCutEfficacy(), and SCIPisCutEfficacious()
- additional parameter "sol" for method SCIPseparateKnapsackCover()

plugins:

parameters:

features:

fixed bugs:


SCIP version 0.80
=================

interface:
- MAJOR CHANGE:
  preceeded all data types with "SCIP_" - you may use shell script reptypes_scip.sh to rename the SCIP data types in
  your own source code (But use with care! Create a backup copy of your source first!)
- additional parameter "validnode" for SCIPaddConsLocal() and SCIPaddConsNode()
- new method SCIPgetNConflictClausesApplied()
- new method SCIPdelVar()
- new method SCIPgetVarStrongbranchLPAge()
- new method SCIPgetNConflictClausesApplied()
- new event type SCIP_EVENTTYPE_VARDELETED
- new method SCIPconsGetValidDepth()
- new method SCIPhashtableExists()
- method SCIPhashtableRemove() can now also be called, if the element does not exist in the table
- new method SCIPhashmapExists()
- method SCIPhashmapRemove() can now also be called, if the element does not exist in the map
- new method SCIPvarIsTransformedOrigvar()
- new method SCIPvarIsDeleted()
- new callback parameter "validnode" for the CONFLICTEXEC method of conflict handlers, which should be passed to
  SCIPaddConsNode()
- new method SCIPnodeGetNumber()
- new method SCIPsolveProbingLP() to solve the LP in a probing node (enables mixing of propagation and LP solving
  for diving heuristics)
- new method SCIProwGetDualfarkas()
- new method SCIPgetCurrentNode()
- new method SCIPinterruptSolve()
- new file i/o methods SCIPfopen(), SCIPfclose(), SCIPfprintf(), ... that operate on the data type SCIPFILE;
  these methods automatically use zlib methods if the zlib is enabled
- additional parameter "branchdir" for SCIPbranchVar()
- replaced method SCIPmessage() by SCIPverbMessage() with additional parameter "file"