@@ -19,6 +19,11 @@ features:
 
 fixed bugs:
 
+known bugs:
+- if one uses column generation and restarts, a solution that contains variables that are only present in the transformed
+  problem (i.e., variables that were generated by a pricer) is not pulled back into the original space correctly, since
+  the priced variables have no original counterpart
+
 
 SCIP version 0.80
 =================
